fix overflow

--- a/css/preso.css
+++ b/css/preso.css
@@ -348,3 +348,6 @@ html .syntaxhighlighter {
 	top: 0;
 	right: 0;
 }
+.ui-content{
+	overflow: scroll !important;
+}
